# LonelyRunner

./: .gitignore  CLAUDE.md  CMakeLists.txt  README  README.md  setup.sh
.claude/: settings.local.json
Forms/: Formalia-Beskrivelse.odt  Projektkontrakt_for_kandidatprojekter.odt
build-san/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build-san/.qt/: QtDeploySupport.cmake
report/: LonelyRunner.bbl  LonelyRunner.bib  LonelyRunner.tex  Makefile  algorithm2e.sty  appendix.tex  choiceOfMethod.tex  conclusion.tex  implementation.tex  introduction.tex  method.tex  mikkel.sty  program.tex  results.tex  testResults.tex
report/images/: Lonely_Runner_Verifier.eps  Options.eps  Range_Options.eps  algoIllu.fig  algoIlluEPS  algoIlluEPS.eps  algoIlluPng.py  circleRunners.fig  circleRunnersEPS  circleZone.fig  circleZoneEPS.eps  circleZonePng  circleZonePng.xcf
src/: formatData.py  format_prime.py  prime_numbers.json  random_number_generator.py
src/C++/: Advanced_Geometric.cpp  Advanced_Geometric.h  Geometric.cpp  Geometric.h  GeometricBACKUP.cpp  LonelyRunner.cbp  LonelyRunner.depend  LonelyRunner.layout  LonelyRunner.out  Numerical.cpp  Numerical.h  NumericalBACKUP.cpp  Prime_Number.cpp  Prime_Number.h  README  data_structure.cpp  data_structure.h  event_point.cpp  event_point.h  main.c  main.cpp  main_test.cpp  makefile  util.cpp  util.h
src/app/: CMakeLists.txt  animationwidget.cpp  animationwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  manualtestpanel.cpp  manualtestpanel.h  optionspanel.cpp  optionspanel.h  rangetestpanel.cpp  rangetestpanel.h  rangeworker.cpp  rangeworker.h  thememanager.cpp  thememanager.h  verifyfilepanel.cpp  verifyfilepanel.h
src/core/: CMakeLists.txt  data_structures.h  geometric.cpp  geometric.h  numerical.cpp  numerical.h  prime.cpp  prime.h  prime_modular.cpp  prime_modular.h  range_test.cpp  range_test.h  util.cpp  util.h
src/data/: format_prime.py  prime_number_raw.txt  test_Primes-Random_1000_runners.json  test_Primes-Random_100_runners.json  test_Primes-Random_12000_runners.json  test_Primes-Random_2000_runners.json  test_Primes-Random_30000_runners.json  test_Primes-Random_4000_runners.json  test_Primes-Random_50000_runners.json  test_Primes-Random_5000_runners.json  test_Primes-Random_500_runners.json  test_Primes-Random_8000_runners.json  test_Primes_1000_runners.json  test_Primes_100_runners.json  test_Primes_12000_runners.json  test_Primes_2000_runners.json  test_Primes_30000_runners.json  (+22 more)
src/fuzz/: CMakeLists.txt  fuzz_algorithms.cpp
src/test/: tests.cpp  (+1 more)
(+44 files in other folders)
